--- a/chrome-extension/themes/websites/stackoverflow.scss
+++ b/chrome-extension/themes/websites/stackoverflow.scss
@@ -11,6 +11,10 @@ button {
     border-color: $theme-border !important;
 }
 
+span.icon {
+	@include invert-back();
+}
+
 // All inputs
 input {
     color: $theme-textbox-text;
@@ -20,8 +24,7 @@ input {
 
 //logo
 #hlogo {
-    @include invert-back();
-    background-color: $theme-url !important;
+    -webkit-filter: invert(100%) saturate(3) brightness(0.65) !important;
 }
 
 //top bar
@@ -41,7 +44,7 @@ input {
 
 //main content
 #content {
-    background-color: $theme-background-box !important;
+    background-color: $theme-background !important;
     border-color: $theme-border !important;
     //answer question at bottom
     #wmd-button-bar,
@@ -68,6 +71,19 @@ input {
     background: $theme-background !important;
 }
 
+#hmenus .nav ul li a {
+    background-color: $theme-button-background !important;
+    color: $theme-button-text !important;
+
+}
+
+#hmenus .nav ul li.youarehere a, #hmenus .nav ul li a:hover {
+	background-color: darken($theme-button-background, 10%) !important;
+}
+
+.topbar .topbar-links .topbar-flair .reputation, .topbar .topbar-links .topbar-flair .badgecount {
+	color: $theme-link !important;
+}
 //----------------------------------------------------------------------------------------------------------------------------------------------------
 // Login 
 //----------------------------------------------------------------------------------------------------------------------------------------------------
@@ -121,23 +137,28 @@ input {
 	border-color: $theme-border !important;
 	color: $theme-text !important;
 }
+.bounty-award {
+	-webkit-filter: invert(100%);
+}
 //icon number for questions
 .answer-votes,
 .answered
 {
-	background-color: $theme-textbox-background !important;
-	border-color: $theme-border !important;
-	color: $theme-text !important;
-	strong {
-		color: $theme-text-faint !important;
+	/*background-color: $theme-textbox-background !important;*/
+	border-color: invert-back-color(#5fba7d) !important;
+	color: invert-back-color(#5fba7d) !important;
+	.mini-counts {
+		color: invert-back-color(#5fba7d) !important;
 	}
+	/*strong {
+		color: $theme-text-faint !important;
+	}*/
 }
 //icon with answered accepted
 .answered-accepted
 {
-	background-color: $theme-button-background !important;
-	border-color: $theme-border !important;
-
+	background-color: invert-back-color(#5fba7d) !important;
+	color: invert-back-color(#ffffff) !important;
 }
 
 //join stack over flow button
@@ -263,7 +284,52 @@ input {
 	}
 }
 //----------------------------------------------------------------------------------------------------------------------------------------------------
+// Right-side Sidebar
+//----------------------------------------------------------------------------------------------------------------------------------------------------
+div.clc-jobs-multi.blue {
+	background-color: $theme-background-box !important;
+}
+div.clc-jobs-multi>a.top {
+	color: invert-back-color(#FFFFFF) !important;
+}
+div.clc-jobs-multi>.middle>ul .job-wrap .title {
+	color: $theme-link !important;
+}
+
+//----------------------------------------------------------------------------------------------------------------------------------------------------
+// Code
+//----------------------------------------------------------------------------------------------------------------------------------------------------
+/*pre.prettyprint {
+	background-color: invert-back-color(#000) !important;
+
+}
+*/
+
+pre.prettyprint::-webkit-scrollbar-track {
+    background: invert-back-color(#222);
+}
+ 
+pre.prettyprint::-webkit-scrollbar-thumb {
+    background: invert-back-color(#444);
+	border-color: invert-back-color(#444);
+}
+/*
+code {
+	-webkit-filter: brightness(2) saturate(0.5) invert(100%)
+	background-color: #000 !important;
+
+}*/
+//----------------------------------------------------------------------------------------------------------------------------------------------------
 // Tags
+//----------------------------------------------------------------------------------------------------------------------------------------------------
+.post-tag {
+	background: $theme-faint-button-background !important;
+	color: $theme-button-text !important;
+}
+
+
+//----------------------------------------------------------------------------------------------------------------------------------------------------
+// Badges
 //----------------------------------------------------------------------------------------------------------------------------------------------------
 .badge{
 	background-color: $theme-background-toolbar !important;
@@ -272,6 +338,3 @@ input {
 .badge-earned-check{
 	@include invert-back();
 }
-//----------------------------------------------------------------------------------------------------------------------------------------------------
-// Badges
-//----------------------------------------------------------------------------------------------------------------------------------------------------
